[gd_scene load_steps=17 format=1]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://scripts/player_sword.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]

length = 0.15
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("body/rotate_head/head:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1, 0.15 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 42, 43, 44 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [ "p_sword_sweep" ],
"method": "play_event"
} ]
}

[sub_resource type="Animation" id=2]

length = 0.15
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("body/rotate_head/head:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1, 0.15 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [ "p_sword_sweep" ],
"method": "play_event"
} ]
}

[sub_resource type="Animation" id=3]

length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 40 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/rotate_head/head:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 6 ) ]
}

[sub_resource type="Animation" id=4]

length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 48 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/rotate_head/head:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 6 ) ]
}

[sub_resource type="Animation" id=5]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("body:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 40 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body/rotate_head/head:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 6 ) ]
}

[sub_resource type="Animation" id=6]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("body:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 48 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body/rotate_head/head:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 6 ) ]
}

[sub_resource type="Animation" id=7]

length = 0.7
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 88, 89, 88 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/rotate_head/head:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.2, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 8 ), Vector2( 2, 9 ), Vector2( 1, 8 ) ]
}

[sub_resource type="Animation" id=8]

length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("body/rotate_head/head:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 40, 41 ]
}

[sub_resource type="Animation" id=9]

length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("body/rotate_head/head:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 48, 49 ]
}

[sub_resource type="Animation" id=10]

length = 1.0
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=11]

length = 0.7
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("body:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.2, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 90, 91, 90 ]
}

[sub_resource type="Animation" id=12]

length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("body:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1 ), Vector2( 0, -2 ), Vector2( 0, 0 ), Vector2( 0, -1 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0.2 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "_running_dust"
} ]
}

[sub_resource type="Animation" id=13]

length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("fx:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.8 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fx:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 78, 79, 80, 81, 82, 83, 84, 85 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 5, 24 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("body:visibility/visible")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "teleport_in"
} ]
}

[sub_resource type="Animation" id=14]

length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("fx:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.8 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fx:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 85, 84, 83, 82, 81, 80, 79, 78 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 24, 5 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "teleport_out"
} ]
}

[node name="player_sword" type="Sprite"]

texture = ExtResource( 1 )
offset = Vector2( 0, -6 )
vframes = 12
hframes = 8
frame = 24
script/script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="body" type="Sprite" parent="."]

texture = ExtResource( 1 )
offset = Vector2( 0, -6 )
vframes = 12
hframes = 8
frame = 40
__meta__ = {
"_edit_lock_": true
}

[node name="rotate_head" type="Node2D" parent="body"]

transform/pos = Vector2( 0, -6 )
__meta__ = {
"_edit_lock_": true
}

[node name="head" type="Sprite" parent="body/rotate_head"]

transform/pos = Vector2( 0, 6 )
texture = ExtResource( 1 )
offset = Vector2( 0, -6 )
vframes = 12
hframes = 8
frame = 4
__meta__ = {
"_edit_lock_": true
}

[node name="fx" type="Sprite" parent="."]

texture = ExtResource( 1 )
offset = Vector2( 0, -12 )
vframes = 12
hframes = 8
frame = 78

[node name="anim_body" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/attack d" = SubResource( 1 )
"anims/attack u" = SubResource( 2 )
"anims/idle d" = SubResource( 3 )
"anims/idle u" = SubResource( 4 )
"anims/none d" = SubResource( 5 )
"anims/none u" = SubResource( 6 )
anims/pick = SubResource( 7 )
"anims/run d" = SubResource( 8 )
"anims/run u" = SubResource( 9 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="anim_legs" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/idle = SubResource( 10 )
anims/pick = SubResource( 11 )
anims/run = SubResource( 12 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="anim_fx" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/arrive = SubResource( 13 )
anims/leave = SubResource( 14 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="finished" from="anim_body" to="." method="_on_anim_body_finished"]

[connection signal="finished" from="anim_legs" to="." method="_on_anim_legs_finished"]

[connection signal="finished" from="anim_fx" to="." method="_on_anim_fx_finished"]


